# nexus

./: .gitignore  CLAUDE.md  PLAN-Chat-Function.md  Plan.md  README.md  VECTOR.md  main.py  nexus-install.sh  pyproject.toml
.claude/commands/: sweep.md
config/: settings.example.yaml
modules/backup/: CLAUDE.template.md  backup_ops.py  project_screen.py  setup_screen.py  skills.py
modules/codex/: CLAUDE.template.md  module.py  project_screen.py  skills.py
modules/custom/: CLAUDE.template.md  module.py  project_screen.py  skills.py
modules/emulator/: CLAUDE.template.md  module.py  project_screen.py  skills.py
modules/game/: CLAUDE.template.md  project_screen.py  skills.py
modules/git/: CLAUDE.template.md  git_ops.py  github_api.py  module.py  project_screen.py  setup_screen.py  skills.py
modules/home/: CLAUDE.template.md  project_screen.py  skills.py
modules/journal/: CLAUDE.template.md  project_screen.py  skills.py
modules/localai/: CLAUDE.template.md  hw_detect.py  model_browser_screen.py  model_catalog.py  module.py  project_screen.py  setup_screen.py  skills.py
modules/org/: CLAUDE.template.md  project_screen.py  skills.py
modules/research/: CLAUDE.template.md  project_screen.py  skills.py
modules/sdforge/: CLAUDE.template.md  api_client.py  project_screen.py  setup_screen.py  skills.py
modules/security/: CLAUDE.template.md  project_screen.py  skills.py
modules/server/: CLAUDE.template.md  project_screen.py  skills.py
modules/streaming/: CLAUDE.template.md  module.py  project_screen.py  skills.py
nexus/: app.py
tests/: docker-test.md
(+35 files in other folders)
